--- a/app/package.json
+++ b/app/package.json
@@ -17,12 +17,37 @@
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.4",
     "@astrojs/solid-js": "^4.2.0",
+    "@deminearchiver/utils": "workspace:*",
+    "@expressive-code/plugin-collapsible-sections": "^0.35.3",
+    "@expressive-code/plugin-line-numbers": "^0.35.3",
+    "@fontsource-variable/fira-code": "^5.0.18",
+    "@fontsource-variable/roboto-flex": "^5.0.15",
+    "@fontsource/roboto": "^5.0.13",
     "@material-symbols/unplugin-icons": "workspace:*",
+    "@material/material-color-utilities": "workspace:*",
+    "@material/solid": "workspace:*",
     "@playform/compress": "^0.0.4",
+    "@solid-primitives/bounds": "^0.0.121",
+    "@solid-primitives/event-listener": "^2.3.3",
+    "@solid-primitives/media": "^2.2.9",
+    "@solid-primitives/pagination": "^0.3.0",
+    "@solid-primitives/refs": "^1.0.8",
+    "@solid-primitives/scheduled": "^1.4.3",
+    "@solid-primitives/scroll": "^2.0.23",
+    "@solid-primitives/storage": "^3.5.0",
+    "@solid-primitives/utils": "^6.2.3",
     "@vanilla-extract/css": "^1.15.1",
+    "@vanilla-extract/dynamic": "^2.1.0",
+    "@vanilla-extract/recipes": "^0.5.2",
+    "@vanilla-extract/sprinkles": "^1.6.1",
     "astro": "^4.8.3",
+    "astro-expressive-code": "^0.35.3",
+    "clsx": "^2.1.1",
+    "lightningcss": "^1.24.1",
+    "normalize.css": "^8.0.1",
     "solid-js": "^1.8.17",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "wrangler": "^3.57.0"
   },
   "devDependencies": {
     "@iconify-json/material-symbols": "^1.1.80",
