--- a/packages/material/solid/package.json
+++ b/packages/material/solid/package.json
@@ -1,12 +1,19 @@
 {
   "private": true,
   "name": "@material/solid",
+  "exports": {
+    "./theme": "./theme/index.ts",
+    "./utils": "./utils/index.ts",
+    "./components/splash": "./components/splash/index.ts",
+    "./components/switch": "./components/switch/index.ts"
+  },
   "packageManager": "yarn@4.2.2",
   "devDependencies": {
     "@deminearchiver/configs": "workspace:*",
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@material/material-color-utilities": "workspace:*",
     "@solid-primitives/event-listener": "^2.3.3",
     "@solid-primitives/media": "^2.2.9",
     "@solid-primitives/raf": "^2.1.16",
@@ -16,6 +23,8 @@
     "@vanilla-extract/css": "^1.15.1",
     "@vanilla-extract/recipes": "^0.5.2",
     "@vanilla-extract/sprinkles": "^1.6.1",
-    "solid-js": "^1.8.17"
+    "clsx": "^2.1.1",
+    "solid-js": "^1.8.17",
+    "svg-path-properties": "^1.3.0"
   }
 }
