--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-solid": "^0.14.0",
     "fontaine": "^0.5.0",
     "typescript": "^5.4.5",
-    "typescript-eslint": "^8.0.0-alpha"
+    "typescript-eslint": "^8.0.0-alpha",
+    "vercel": "^34.2.0"
   }
 }
