Really important update: bunch of stuff

--- a/app/package.json
+++ b/app/package.json
@@ -26,11 +26,13 @@
     "@material-symbols/unplugin-icons": "workspace:*",
     "@material/material-color-utilities": "workspace:*",
     "@material/solid": "workspace:*",
+    "@pagefind/astro": "workspace:*",
     "@playform/compress": "^0.0.4",
     "@solid-primitives/bounds": "^0.0.121",
     "@solid-primitives/event-listener": "^2.3.3",
     "@solid-primitives/media": "^2.2.9",
     "@solid-primitives/pagination": "^0.3.0",
+    "@solid-primitives/presence": "^0.0.6",
     "@solid-primitives/refs": "^1.0.8",
     "@solid-primitives/scheduled": "^1.4.3",
     "@solid-primitives/scroll": "^2.0.23",
@@ -40,7 +42,7 @@
     "@vanilla-extract/dynamic": "^2.1.0",
     "@vanilla-extract/recipes": "^0.5.2",
     "@vanilla-extract/sprinkles": "^1.6.1",
-    "astro": "^4.8.3",
+    "astro": "^4.8.6",
     "astro-expressive-code": "^0.35.3",
     "clsx": "^2.1.1",
     "lightningcss": "^1.24.1",
