--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "workspaces": [
     "app",
     "packages/*",
+    "packages/astro/*",
     "packages/material/*",
     "packages/material/material-color-utilities/typescript"
   ],
@@ -13,7 +14,9 @@
     ":website": "yarn : @deminearchiver/website",
     "astro": "yarn :website astro",
     "dev": "yarn :website dev",
-    "build": "yarn :website build"
+    "build": "yarn :website build",
+    "preview": "yarn :website preview",
+    "deploy:cloudflare": "yarn wrangler pages deploy app/dist --project-name=deminearchiver"
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
@@ -23,6 +26,7 @@
     "fontaine": "^0.5.0",
     "typescript": "^5.4.5",
     "typescript-eslint": "^8.0.0-alpha",
-    "vercel": "^34.2.0"
+    "vercel": "^34.2.0",
+    "wrangler": "^3.57.0"
   }
 }
