--- a/packages/material/solid/package.json
+++ b/packages/material/solid/package.json
@@ -9,11 +9,11 @@
   },
   "packageManager": "yarn@4.2.2",
   "devDependencies": {
-    "@deminearchiver/configs": "workspace:*",
+    "@deminearchiver/configs": "workspace:^",
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@material/material-color-utilities": "workspace:*",
+    "@material/material-color-utilities": "workspace:^",
     "@solid-primitives/event-listener": "^2.3.3",
     "@solid-primitives/media": "^2.2.9",
     "@solid-primitives/raf": "^2.1.16",
