--- a/app/package.json
+++ b/app/package.json
@@ -17,16 +17,16 @@
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.4",
     "@astrojs/solid-js": "^4.2.0",
-    "@deminearchiver/utils": "workspace:*",
+    "@deminearchiver/utils": "workspace:^",
     "@expressive-code/plugin-collapsible-sections": "^0.35.3",
     "@expressive-code/plugin-line-numbers": "^0.35.3",
     "@fontsource-variable/fira-code": "^5.0.18",
     "@fontsource-variable/roboto-flex": "^5.0.15",
     "@fontsource/roboto": "^5.0.13",
-    "@material-symbols/unplugin-icons": "workspace:*",
-    "@material/material-color-utilities": "workspace:*",
-    "@material/solid": "workspace:*",
-    "@pagefind/astro": "workspace:*",
+    "@material-symbols/unplugin-icons": "workspace:^",
+    "@material/material-color-utilities": "workspace:^",
+    "@material/solid": "workspace:^",
+    "@pagefind/astro": "workspace:^",
     "@playform/compress": "^0.0.4",
     "@solid-primitives/bounds": "^0.0.121",
     "@solid-primitives/event-listener": "^2.3.3",
