--- a/app/package.json
+++ b/app/package.json
@@ -13,20 +13,20 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.6.0",
-    "@astrojs/mdx": "^3.0.0",
+    "@astrojs/mdx": "^3.0.1",
     "@astrojs/rss": "^4.0.5",
-    "@astrojs/sitemap": "^3.1.4",
+    "@astrojs/sitemap": "^3.1.5",
     "@astrojs/solid-js": "^4.2.0",
-    "@deminearchiver/utils": "workspace:^",
+    "@deminearchiver/utils": "workspace:*",
     "@expressive-code/plugin-collapsible-sections": "^0.35.3",
     "@expressive-code/plugin-line-numbers": "^0.35.3",
     "@fontsource-variable/fira-code": "^5.0.18",
     "@fontsource-variable/roboto-flex": "^5.0.15",
     "@fontsource/roboto": "^5.0.13",
-    "@material-symbols/unplugin-icons": "workspace:^",
-    "@material/material-color-utilities": "workspace:^",
-    "@material/solid": "workspace:^",
-    "@pagefind/astro": "workspace:^",
+    "@material-symbols/unplugin-icons": "workspace:*",
+    "@material/material-color-utilities": "workspace:*",
+    "@material/solid": "workspace:*",
+    "@pagefind/astro": "workspace:*",
     "@playform/compress": "^0.0.4",
     "@solid-primitives/bounds": "^0.0.121",
     "@solid-primitives/event-listener": "^2.3.3",
@@ -42,7 +42,7 @@
     "@vanilla-extract/dynamic": "^2.1.0",
     "@vanilla-extract/recipes": "^0.5.2",
     "@vanilla-extract/sprinkles": "^1.6.1",
-    "astro": "^4.8.6",
+    "astro": "^4.8.7",
     "astro-expressive-code": "^0.35.3",
     "clsx": "^2.1.1",
     "lightningcss": "^1.24.1",
