--- a/app/package.json
+++ b/app/package.json
@@ -38,10 +38,11 @@
     "@solid-primitives/scroll": "^2.0.23",
     "@solid-primitives/storage": "^3.5.0",
     "@solid-primitives/utils": "^6.2.3",
-    "@vanilla-extract/css": "^1.15.1",
-    "@vanilla-extract/dynamic": "^2.1.0",
-    "@vanilla-extract/recipes": "^0.5.2",
-    "@vanilla-extract/sprinkles": "^1.6.1",
+    "@vanilla-extract/css": "^1.15.2",
+    "@vanilla-extract/dynamic": "^2.1.1",
+    "@vanilla-extract/private": "^1.0.5",
+    "@vanilla-extract/recipes": "^0.5.3",
+    "@vanilla-extract/sprinkles": "^1.6.2",
     "astro": "^4.8.7",
     "astro-expressive-code": "^0.35.3",
     "clsx": "^2.1.1",
@@ -54,7 +55,7 @@
   "devDependencies": {
     "@iconify-json/material-symbols": "^1.1.80",
     "@iconify-json/simple-icons": "^1.1.101",
-    "@vanilla-extract/vite-plugin": "^4.0.9",
+    "@vanilla-extract/vite-plugin": "^4.0.10",
     "astro-meta-tags": "^0.3.0",
     "unplugin-icons": "^0.19.0"
   }
