--- a/packages/material/solid/package.json
+++ b/packages/material/solid/package.json
@@ -6,6 +6,7 @@
     "./theme": "./theme/index.ts",
     "./utils": "./utils/index.ts",
     "./components/splash": "./components/splash/index.ts",
+    "./components/focus": "./components/focus/index.ts",
     "./components/switch": "./components/switch/index.ts",
     "./components/button": "./components/button/index.ts",
     "./components/icon-button": "./components/icon-button/index.ts",
@@ -26,9 +27,9 @@
     "@solid-primitives/refs": "^1.0.8",
     "@solid-primitives/scroll": "^2.0.23",
     "@solid-primitives/utils": "^6.2.3",
-    "@vanilla-extract/css": "^1.15.1",
-    "@vanilla-extract/recipes": "^0.5.2",
-    "@vanilla-extract/sprinkles": "^1.6.1",
+    "@vanilla-extract/css": "^1.15.2",
+    "@vanilla-extract/recipes": "^0.5.3",
+    "@vanilla-extract/sprinkles": "^1.6.2",
     "clsx": "^2.1.1",
     "solid-js": "^1.8.17",
     "svg-path-properties": "^1.3.0"
