--- a/app/package.json
+++ b/app/package.json
@@ -12,9 +12,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.6.0",
+    "@astrojs/check": "^0.7.0",
     "@astrojs/mdx": "^3.0.1",
-    "@astrojs/rss": "^4.0.5",
+    "@astrojs/rss": "^4.0.6",
     "@astrojs/sitemap": "^3.1.5",
     "@astrojs/solid-js": "^4.2.0",
     "@deminearchiver/utils": "workspace:*",
@@ -47,7 +47,9 @@
     "astro-expressive-code": "^0.35.3",
     "clsx": "^2.1.1",
     "lightningcss": "^1.24.1",
+    "markdown-it": "^14.1.0",
     "normalize.css": "^8.0.1",
+    "sanitize-html": "^2.13.0",
     "solid-js": "^1.8.17",
     "typescript": "^5.4.5",
     "wrangler": "^3.57.0"
@@ -55,6 +57,8 @@
   "devDependencies": {
     "@iconify-json/material-symbols": "^1.1.80",
     "@iconify-json/simple-icons": "^1.1.101",
+    "@types/markdown-it": "^14",
+    "@types/sanitize-html": "^2",
     "@vanilla-extract/vite-plugin": "^4.0.10",
     "astro-meta-tags": "^0.3.0",
     "unplugin-icons": "^0.19.0"
