--- a/app/package.json
+++ b/app/package.json
@@ -24,7 +24,7 @@
     "@fontsource-variable/roboto-flex": "^5.0.15",
     "@fontsource/roboto": "^5.0.13",
     "@material-symbols/unplugin-icons": "workspace:*",
-    "@material/material-color-utilities": "workspace:*",
+    "@material/material-color-utilities": "https://gitpkg.now.sh/material-foundation/material-color-utilities/typescript?main",
     "@material/solid": "workspace:*",
     "@pagefind/astro": "workspace:*",
     "@playform/compress": "^0.0.4",
@@ -38,12 +38,13 @@
     "@solid-primitives/scroll": "^2.0.23",
     "@solid-primitives/storage": "^3.5.0",
     "@solid-primitives/utils": "^6.2.3",
+    "@unpic/astro": "^0.0.46",
     "@vanilla-extract/css": "^1.15.2",
     "@vanilla-extract/dynamic": "^2.1.1",
     "@vanilla-extract/private": "^1.0.5",
     "@vanilla-extract/recipes": "^0.5.3",
     "@vanilla-extract/sprinkles": "^1.6.2",
-    "astro": "^4.8.7",
+    "astro": "^4.9.1",
     "astro-expressive-code": "^0.35.3",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
