--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "@fontsource-variable/roboto-flex": "^5.0.15",
     "@fontsource/roboto": "^5.0.13",
     "@material-symbols/unplugin-icons": "workspace:*",
+    "@material/astro": "workspace:*",
     "@material/material-color-utilities": "https://gitpkg.now.sh/material-foundation/material-color-utilities/typescript?main",
     "@material/solid": "workspace:*",
     "@pagefind/astro": "workspace:*",
