--- a/app/package.json
+++ b/app/package.json
@@ -53,6 +53,7 @@
     "lightningcss": "^1.24.1",
     "markdown-it": "^14.1.0",
     "normalize.css": "^8.0.1",
+    "pathe": "^1.1.2",
     "sanitize-html": "^2.13.0",
     "solid-js": "^1.8.17",
     "typescript": "^5.4.5",
