--- a/packages/material/solid/package.json
+++ b/packages/material/solid/package.json
@@ -12,6 +12,7 @@
     "./components/icon-button": "./components/icon-button/index.ts",
     "./components/list": "./components/list/index.ts",
     "./components/card": "./components/card/index.ts",
+    "./components/tooltip": "./components/tooltip/index.ts",
     "./components/empty": "./components/empty/index.ts"
   },
   "packageManager": "yarn@4.2.2",
@@ -21,14 +22,17 @@
   },
   "dependencies": {
     "@deminearchiver/utils": "workspace:*",
+    "@floating-ui/dom": "^1.6.5",
     "@material/material-color-utilities": "https://gitpkg.now.sh/material-foundation/material-color-utilities/typescript?main",
     "@solid-primitives/event-listener": "^2.3.3",
     "@solid-primitives/media": "^2.2.9",
+    "@solid-primitives/presence": "^0.0.6",
     "@solid-primitives/raf": "^2.1.16",
     "@solid-primitives/refs": "^1.0.8",
     "@solid-primitives/scroll": "^2.0.23",
     "@solid-primitives/utils": "^6.2.3",
     "@vanilla-extract/css": "^1.15.2",
+    "@vanilla-extract/dynamic": "^2.1.1",
     "@vanilla-extract/recipes": "^0.5.3",
     "@vanilla-extract/sprinkles": "^1.6.2",
     "clsx": "^2.1.1",
