--- a/app/package.json
+++ b/app/package.json
@@ -13,11 +13,11 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
-    "@astrojs/cloudflare": "^10.2.6",
-    "@astrojs/mdx": "^3.0.1",
+    "@astrojs/cloudflare": "^10.3.0",
+    "@astrojs/mdx": "^3.1.0",
     "@astrojs/rss": "^4.0.6",
     "@astrojs/sitemap": "^3.1.5",
-    "@astrojs/solid-js": "^4.2.0",
+    "@astrojs/solid-js": "^4.3.0",
     "@deminearchiver/utils": "workspace:*",
     "@expressive-code/plugin-collapsible-sections": "^0.35.3",
     "@expressive-code/plugin-line-numbers": "^0.35.3",
@@ -28,10 +28,13 @@
     "@material/astro": "workspace:*",
     "@material/material-color-utilities": "https://gitpkg.now.sh/material-foundation/material-color-utilities/typescript?main",
     "@material/solid": "workspace:*",
+    "@octokit/auth": "^3.0.3",
+    "@octokit/graphql": "^8.1.1",
     "@pagefind/astro": "workspace:*",
     "@playform/compress": "^0.0.4",
     "@solid-primitives/bounds": "^0.0.121",
     "@solid-primitives/event-listener": "^2.3.3",
+    "@solid-primitives/graphql": "^2.0.4",
     "@solid-primitives/media": "^2.2.9",
     "@solid-primitives/pagination": "^0.3.0",
     "@solid-primitives/presence": "^0.0.6",
