Back from the dead

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,11 +7,11 @@
     "**/node_modules": true,
     "**/.gitignore": true
   },
-  "typescript.tsdk": "node_modules\\typescript\\lib",
+  "typescript.tsdk": "./node_modules/typescript/lib",
   "eslint.rules.customizations": [
     {
       "rule": "*",
       "severity": "warn"
     },
-  ],
+  ]
 }
