--- a/app/package.json
+++ b/app/package.json
@@ -3,7 +3,7 @@
   "name": "@deminearchiver/website",
   "version": "0.0.1",
   "type": "module",
-  "packageManager": "yarn@4.2.2",
+  "packageManager": "yarn@4.9.3",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -12,64 +12,64 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.7.0",
-    "@astrojs/cloudflare": "^10.3.0",
-    "@astrojs/mdx": "^3.1.0",
-    "@astrojs/rss": "^4.0.6",
-    "@astrojs/sitemap": "^3.1.5",
-    "@astrojs/solid-js": "^4.3.0",
-    "@deminearchiver/utils": "workspace:*",
-    "@expressive-code/plugin-collapsible-sections": "^0.35.3",
-    "@expressive-code/plugin-line-numbers": "^0.35.3",
-    "@fontsource-variable/fira-code": "^5.0.18",
-    "@fontsource-variable/roboto-flex": "^5.0.15",
-    "@fontsource/roboto": "^5.0.13",
-    "@material-symbols/unplugin-icons": "workspace:*",
-    "@material/astro": "workspace:*",
-    "@material/material-color-utilities": "https://gitpkg.now.sh/material-foundation/material-color-utilities/typescript?main",
-    "@material/solid": "workspace:*",
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/cloudflare": "^12.6.4",
+    "@astrojs/mdx": "^4.3.4",
+    "@astrojs/rss": "^4.0.12",
+    "@astrojs/sitemap": "^3.5.0",
+    "@astrojs/solid-js": "^5.1.0",
+    "@deminearchiver/utils": "workspace:^",
+    "@expressive-code/plugin-collapsible-sections": "^0.41.3",
+    "@expressive-code/plugin-line-numbers": "^0.41.3",
+    "@fontsource-variable/fira-code": "^5.2.6",
+    "@fontsource-variable/roboto-flex": "^5.2.6",
+    "@fontsource/roboto": "^5.2.6",
+    "@material-symbols/unplugin-icons": "workspace:^",
+    "@material/astro": "workspace:^",
+    "@material/material-color-utilities": "workspace:^",
+    "@material/solid": "workspace:^",
     "@octokit/auth": "^3.0.3",
-    "@octokit/graphql": "^8.1.1",
-    "@pagefind/astro": "workspace:*",
-    "@playform/compress": "^0.0.4",
-    "@solid-primitives/bounds": "^0.0.121",
-    "@solid-primitives/event-listener": "^2.3.3",
-    "@solid-primitives/graphql": "^2.0.4",
-    "@solid-primitives/media": "^2.2.9",
-    "@solid-primitives/pagination": "^0.3.0",
-    "@solid-primitives/presence": "^0.0.6",
-    "@solid-primitives/refs": "^1.0.8",
-    "@solid-primitives/scheduled": "^1.4.3",
-    "@solid-primitives/scroll": "^2.0.23",
-    "@solid-primitives/storage": "^3.5.0",
-    "@solid-primitives/utils": "^6.2.3",
-    "@unpic/astro": "^0.0.46",
-    "@vanilla-extract/css": "^1.15.2",
-    "@vanilla-extract/dynamic": "^2.1.1",
-    "@vanilla-extract/private": "^1.0.5",
-    "@vanilla-extract/recipes": "^0.5.3",
-    "@vanilla-extract/sprinkles": "^1.6.2",
-    "astro": "^4.10.0",
-    "astro-expressive-code": "^0.35.3",
+    "@octokit/graphql": "^9.0.1",
+    "@pagefind/astro": "workspace:^",
+    "@playform/compress": "^0.2.0",
+    "@solid-primitives/bounds": "^0.1.3",
+    "@solid-primitives/event-listener": "^2.4.3",
+    "@solid-primitives/graphql": "^2.2.2",
+    "@solid-primitives/media": "^2.3.3",
+    "@solid-primitives/pagination": "^0.4.3",
+    "@solid-primitives/presence": "^0.1.2",
+    "@solid-primitives/refs": "^1.1.2",
+    "@solid-primitives/scheduled": "^1.5.2",
+    "@solid-primitives/scroll": "^2.1.3",
+    "@solid-primitives/storage": "^4.3.3",
+    "@solid-primitives/utils": "^6.3.2",
+    "@unpic/astro": "^1.0.1",
+    "@vanilla-extract/css": "^1.17.4",
+    "@vanilla-extract/dynamic": "^2.1.5",
+    "@vanilla-extract/private": "^1.0.9",
+    "@vanilla-extract/recipes": "^0.5.7",
+    "@vanilla-extract/sprinkles": "^1.6.5",
+    "astro": "^5.13.2",
+    "astro-expressive-code": "^0.41.3",
     "clsx": "^2.1.1",
-    "dayjs": "^1.11.11",
-    "lightningcss": "^1.24.1",
+    "dayjs": "^1.11.13",
+    "lightningcss": "^1.30.1",
     "markdown-it": "^14.1.0",
     "normalize.css": "^8.0.1",
-    "pathe": "^1.1.2",
-    "sanitize-html": "^2.13.0",
-    "solid-js": "^1.8.17",
-    "typescript": "^5.4.5",
-    "wrangler": "^3.57.0"
+    "pathe": "^2.0.3",
+    "sanitize-html": "^2.17.0",
+    "solid-js": "^1.9.9",
+    "typescript": "^5.9.2",
+    "wrangler": "^4.32.0"
   },
   "devDependencies": {
-    "@iconify-json/material-symbols": "^1.1.80",
-    "@iconify-json/simple-icons": "^1.1.101",
-    "@types/markdown-it": "^14.1.1",
-    "@types/sanitize-html": "^2.11.0",
-    "@vanilla-extract/vite-plugin": "^4.0.10",
-    "astro-meta-tags": "^0.3.0",
-    "unplugin-icons": "^0.19.0",
-    "unplugin-turbo-console": "^1.8.6"
+    "@iconify-json/material-symbols": "^1.2.33",
+    "@iconify-json/simple-icons": "^1.2.48",
+    "@types/markdown-it": "^14.1.2",
+    "@types/sanitize-html": "^2.16.0",
+    "@vanilla-extract/vite-plugin": "^5.1.1",
+    "astro-meta-tags": "^0.4.0",
+    "unplugin-icons": "^22.2.0",
+    "unplugin-turbo-console": "^2.2.0"
   }
 }
