--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "deminearchiver-website",
-  "packageManager": "yarn@4.2.2",
+  "packageManager": "yarn@4.9.3",
   "workspaces": [
     "app",
     "packages/*",
@@ -19,14 +19,17 @@
     "deploy:cloudflare": "yarn wrangler pages deploy app/dist --project-name=deminearchiver"
   },
   "devDependencies": {
-    "@eslint/js": "^9.2.0",
-    "@types/sanitize-html": "^2.11.0",
-    "eslint": "^9.2.0",
-    "eslint-plugin-astro": "^1.2.0",
-    "eslint-plugin-solid": "^0.14.0",
-    "fontaine": "^0.5.0",
-    "typescript": "^5.4.5",
-    "typescript-eslint": "^8.0.0-alpha",
-    "wrangler": "^3.57.0"
+    "@eslint/js": "^9.33.0",
+    "@types/sanitize-html": "^2.16.0",
+    "eslint": "^9.33.0",
+    "eslint-plugin-astro": "^1.3.1",
+    "eslint-plugin-solid": "^0.14.5",
+    "fontaine": "^0.6.0",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.40.0",
+    "wrangler": "^4.32.0"
+  },
+  "resolutions": {
+    "@material/material-color-utilities": "git@github.com:deminearchiver/material-color-utilities-typescript.git#commit=1241176ff15d5143a2febdfc8b194931e5b1f146"
   }
 }
