--- a/packages/material/solid/package.json
+++ b/packages/material/solid/package.json
@@ -15,28 +15,28 @@
     "./components/tooltip": "./components/tooltip/index.ts",
     "./components/empty": "./components/empty/index.ts"
   },
-  "packageManager": "yarn@4.2.2",
+  "packageManager": "yarn@4.9.3",
   "devDependencies": {
     "@deminearchiver/configs": "workspace:^",
-    "typescript": "^5.4.5"
+    "typescript": "^5.9.2"
   },
   "dependencies": {
-    "@deminearchiver/utils": "workspace:*",
-    "@floating-ui/dom": "^1.6.5",
-    "@material/material-color-utilities": "https://gitpkg.now.sh/material-foundation/material-color-utilities/typescript?main",
-    "@solid-primitives/event-listener": "^2.3.3",
-    "@solid-primitives/media": "^2.2.9",
-    "@solid-primitives/presence": "^0.0.6",
-    "@solid-primitives/raf": "^2.1.16",
-    "@solid-primitives/refs": "^1.0.8",
-    "@solid-primitives/scroll": "^2.0.23",
-    "@solid-primitives/utils": "^6.2.3",
-    "@vanilla-extract/css": "^1.15.2",
-    "@vanilla-extract/dynamic": "^2.1.1",
-    "@vanilla-extract/recipes": "^0.5.3",
-    "@vanilla-extract/sprinkles": "^1.6.2",
+    "@deminearchiver/utils": "workspace:^",
+    "@floating-ui/dom": "^1.7.4",
+    "@material/material-color-utilities": "workspace:^",
+    "@remotion/paths": "^4.0.339",
+    "@solid-primitives/event-listener": "^2.4.3",
+    "@solid-primitives/media": "^2.3.3",
+    "@solid-primitives/presence": "^0.1.2",
+    "@solid-primitives/raf": "^2.3.2",
+    "@solid-primitives/refs": "^1.1.2",
+    "@solid-primitives/scroll": "^2.1.3",
+    "@solid-primitives/utils": "^6.3.2",
+    "@vanilla-extract/css": "^1.17.4",
+    "@vanilla-extract/dynamic": "^2.1.5",
+    "@vanilla-extract/recipes": "^0.5.7",
+    "@vanilla-extract/sprinkles": "^1.6.5",
     "clsx": "^2.1.1",
-    "solid-js": "^1.8.17",
-    "svg-path-properties": "^1.3.0"
+    "solid-js": "^1.9.9"
   }
 }
