--- a/packages/material/symbols/package.json
+++ b/packages/material/symbols/package.json
@@ -12,16 +12,17 @@
     "./types": "./src/types.ts",
     "./types/solid": "./types/solid.d.ts"
   },
-  "packageManager": "yarn@4.2.2",
+  "packageManager": "yarn@4.9.3",
   "dependencies": {
-    "@fontsource-variable/material-symbols-rounded": "^5.0.31",
-    "@fontsource-variable/material-symbols-sharp": "^5.0.31",
-    "astro": "^4.10.0",
-    "unplugin": "^1.10.1"
+    "@fontsource-variable/material-symbols-rounded": "^5.2.19",
+    "@fontsource-variable/material-symbols-sharp": "^5.2.19",
+    "unplugin": "^2.3.8"
   },
   "devDependencies": {
-    "@types/node": "^20.13.0",
-    "typescript": "^5.4.5"
+    "@types/node": "^24.3.0",
+    "astro": "^5.13.2",
+    "typescript": "^5.9.2",
+    "vite": "^7.1.3"
   },
   "peerDependencies": {
     "@nuxt/kit": "^3",
