--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -4,9 +4,9 @@
   "exports": {
     ".": "./src/index.ts"
   },
-  "packageManager": "yarn@4.2.2",
+  "packageManager": "yarn@4.9.3",
   "devDependencies": {
-    "@deminearchiver/configs": "workspace:*",
-    "typescript": "^5.4.5"
+    "@deminearchiver/configs": "workspace:^",
+    "typescript": "^5.9.2"
   }
 }
