--- a/app/package.json
+++ b/app/package.json
@@ -70,6 +70,7 @@
     "@vanilla-extract/vite-plugin": "^5.1.1",
     "astro-meta-tags": "^0.4.0",
     "unplugin-icons": "^22.2.0",
-    "unplugin-turbo-console": "^2.2.0"
+    "unplugin-turbo-console": "^2.2.0",
+    "vite": "^7.1.3"
   }
 }
